# rust-webserver

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
static/: index.html
static/assets/: index-B67uBLj8.js
