[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
tokio = { version = "1.44", features = ["rt-multi-thread"] }
bytes = "1.10.1"
mime_guess = "2.0.5"

[profile.release]
strip = true
opt-level = "s"
